log 3 updated filter package